oefeningen hoofdstuk 5 tabellen

--- a/h5-tabellen/h5_tabellen_oefeningen/oefening5.html
+++ b/h5-tabellen/h5_tabellen_oefeningen/oefening5.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>oefening2</title>
+    <title>Schaakbord</title>
+    <link rel="stylesheet" href="oefening5.css">
 </head>
 <body>
+
+
+
+
 
 </body>
 </html>
