oefening 5 en 6 hoofdstuk 5 tabellen

--- a/h5-tabellen/h5_tabellen_oefeningen/oefening5.html
+++ b/h5-tabellen/h5_tabellen_oefeningen/oefening5.html
@@ -6,7 +6,75 @@
     <link rel="stylesheet" href="oefening5.css">
 </head>
 <body>
+    <header>
+        <h1>Het schaakbord</h1>
+        <p>Een schaakbord is het spelbord waarop het schaakspel wordt gespeeld. Het bestaat uit 64 velden: acht horizontale rijen en acht verticale lijnen. De velden worden zwart en wit genoemd, maar hebben vaak een andere donkere en lichte kleur, wat een beter contrast geeft met de schaakstukken. Zowel in horizontale als in verticale richting zijn de velden om en om licht en donker (wat meer algemeen een schaakbordpatroon wordt genoemd).</p>
+    </header>
+    <main>
+        <table>
+            <tr>
+               <td><img src="assets/torenZwart.png" alt="schaakstuk"></td>
+               <td><img src="assets/paardZwart.png" alt="schaakstuk"></td> 
+               <td><img src="assets/loperZwart.png" alt="schaakstuk"></td>
+               <td><img src="assets/dameZwart.png" alt="schaakstuk"></td> 
+               <td><img src="assets/koningZwart.png" alt="schaakstuk"></td>
+               <td><img src="assets/loperZwart.png" alt="schaakstuk"></td>
+               <td><img src="assets/paardZwart.png" alt="schaakstuk"></td>
+               <td><img src="assets/torenZwart.png" alt="schaakstuk"></td>
+            </tr>
+            <tr>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionZwart.png" alt="schaakstuk"></td>
 
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+        </tr>
+            <tr>
+                <td><img src="assets/torenWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/paardWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/loperWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/dameWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/koningWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/loperWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/paardWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/torenWit.png" alt="schaakstuk"></td>
+            </tr>
+            <tr>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+                <td><img src="assets/pionWit.png" alt="schaakstuk"></td>
+            </tr>
+        </table>
+    </main>
 
 
 
