--- a/basis-css/oefening3.html
+++ b/basis-css/oefening3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Festivals</title>
+    <link rel="stylesheet" href="oefening3.css">
 </head>
 <body>
     <header>
