--- a/basis-css/oefeninge5-harry-potter.html
+++ b/basis-css/oefeninge5-harry-potter.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Harry potter</title>
+    <link rel="stylesheet" href="oefening5.css">
 </head>
 <body>
     <header>
