--- a/h6.basis-structuur-en-positionering/oefening1.html
+++ b/h6.basis-structuur-en-positionering/oefening1.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>oefening1</title>
+    <title>Title</title>
     <link rel="stylesheet" href="oefening1.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-        <aside id="box1"></aside>
-
-        <aside id="box2"></aside>
-
-        <aside id="box3"></aside>
-
-        <aside id="box4"></aside>
-
-        <aside id="box5"></aside>
-
+    <header>
+        <h1>Laagjes</h1>
+    </header>
+    <main>
+        <div id="box1"></div>
+        <div id="box2"></div>
+        <div id="box3"></div>
+        <div id="box4"></div>
+        <div id="box5"></div>
+    </main>
 </body>
 </html>
