--- a/h6.basis-structuur-en-positionering/oefening2.html
+++ b/h6.basis-structuur-en-positionering/oefening2.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>oefening2</title>
+    <title>relative</title>
+    <link rel="stylesheet" href="oefening2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
+    <header>
+    <h1>Laagjes</h1>
+    </header>
+        <main>
+            <div id="box1"></div>
+            <div id="box2"></div>
+            <div id="box3"></div>
+            <div id="box4"></div>
+            <div id="box5"></div>
+    </main>
 </body>
 </html>
