--- a/oefeningen/h8.flexbox-oef/oefening2.html
+++ b/oefeningen/h8.flexbox-oef/oefening2.html
@@ -18,7 +18,7 @@
                 Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
                 Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
                 odit sunt tempora voluptatibus!</p>
-            <p>400,00 EUR</p>
+            <h2 class="prijs">400,00 EUR</h2>
             </article>
             <article id="xbox">
                 <h3>Xbox Series S</h3>
@@ -27,7 +27,7 @@
                     Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
                     Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
                     odit sunt tempora voluptatibus!</p>
-                <p>290,00 EUR</p>
+                <h2 class="prijs">290,00 EUR</h2>
             </article>
             <article id="nintendo">
                 <h3>Nintendo Swtich OLED</h3>
@@ -36,7 +36,7 @@
                     Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
                     Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
                     odit sunt tempora voluptatibus!</p>
-                 <p>337,00 EUR</p>
+                 <h2 class="prijs">337,00 EUR</h2>
             </article>
     </main>
 </body>
