--- a/oefeningen/h8.flexbox-oef/oefening2.html
+++ b/oefeningen/h8.flexbox-oef/oefening2.html
@@ -14,28 +14,19 @@
         <article id="playstation">
             <h3>Playstation 5 Digital</h3>
             <img src="Assets - H8 - Flexbox/assets/playstation.jpg" alt="Playstaion"/>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
-                Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
-                odit sunt tempora voluptatibus!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate expedita harum, iusto mollitia natus repellat voluptate? Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo, odit sunt tempora voluptatibus!</p>
             <h2 class="prijs">400,00 EUR</h2>
             </article>
             <article id="xbox">
                 <h3>Xbox Series S</h3>
                 <img src="Assets - H8 - Flexbox/assets/xbox.jpg" alt="Xbox Series S"/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
-                    Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
-                    odit sunt tempora voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate expedita harum, iusto mollitia natus repellat voluptate? Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo, odit sunt tempora voluptatibus!</p>
                 <h2 class="prijs">290,00 EUR</h2>
             </article>
             <article id="nintendo">
                 <h3>Nintendo Swtich OLED</h3>
                 <img src="Assets - H8 - Flexbox/assets/nintendo.jpg" alt="Nintedo"/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Cupiditate expedita harum, iusto mollitia natus repellat voluptate?
-                    Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo,
-                    odit sunt tempora voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate expedita harum, iusto mollitia natus repellat voluptate? Cupiditate eaque facere facilis harum illo magnam, molestiae mollitia nemo, odit sunt tempora voluptatibus!</p>
                  <h2 class="prijs">337,00 EUR</h2>
             </article>
     </main>
